# aruco

./: CMakeLists.txt  dist.info  generateDoc.cmake
src/: CMakeLists.txt  chromaticmask.cpp  marker.cpp
utils/: CMakeLists.txt  aruco_test_gl.cpp
utils_hrm/: CMakeLists.txt
